@@ -1,22 +1,25 @@
 package io.github.bobocodebreskul.context.support;
 
+import static io.github.bobocodebreskul.context.support.ReflectionUtils.getClassAnnotationValue;
 import static io.github.bobocodebreskul.context.support.ReflectionUtils.getConstructorsAnnotatedWith;
 import static io.github.bobocodebreskul.context.support.ReflectionUtils.getDefaultConstructor;
 import static io.github.bobocodebreskul.context.support.ReflectionUtils.hasDefaultConstructor;
+import static java.util.Objects.nonNull;
 
 import io.github.bobocodebreskul.context.annotations.Autowired;
-import io.github.bobocodebreskul.context.config.BeanDefinition;
+import io.github.bobocodebreskul.context.annotations.Qualifier;
 import io.github.bobocodebreskul.context.config.BeanDependency;
 import io.github.bobocodebreskul.context.exception.BeanDefinitionCreationException;
-import io.github.bobocodebreskul.context.exception.BeanDefinitionDuplicateException;
 import io.github.bobocodebreskul.context.registry.BeanDefinitionRegistry;
 import java.lang.reflect.Constructor;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
 
 /**
  * Utility methods that are useful for bean definition reader implementations.
@@ -29,42 +32,36 @@ public class BeanDefinitionReaderUtils {
   static final String NO_DEFAULT_CONSTRUCTOR_MESSAGE = "Error creating bean with name '%s'. Failed to instantiate [%s]: No default constructor found.";
   static final String MULTIPLE_AUTOWIRED_CONSTRUCTORS_MESSAGE = "Error creating bean with name '%s': Invalid autowire-marked constructor: %s. Found constructor with Autowired annotation already: %s";
   static final String CLASS_WITHOUT_CONSTRUCTORS_MESSAGE = "Error creating bean with name '%s'. Failed to instantiate [%s]: No constructors found, target type is one of the list: [interface; a primitive type; an array class; void]";
-
-
-  /**
-   * Generates a unique bean name for the given bean definition,
-   *
-   * @param beanDefinition the bean definition to generate a bean name for
-   * @param registry       the storage of previously registered bean definition instances (to check
-   *                       for existing bean names)
-   * @return the generated bean name
-   */
-  public static String generateBeanName(BeanDefinition beanDefinition,
-      BeanDefinitionRegistry registry) {
-    Objects.requireNonNull(beanDefinition, () -> {
-      log.error("Failed to generate bean name for nullable bean definition");
-      return "Null bean definition specified";
-    });
-    validateBeanClassNonNull(beanDefinition.getBeanClass());
-    validateBeanClassName(beanDefinition, registry);
-
-    String beanName = uncapitalize(beanDefinition.getBeanClass());
-
-    log.trace("Generated bean name: {} for class {}", beanName,
-        beanDefinition.getBeanClass().getName());
-
-    return beanName;
-  }
+  static final String UNCERTAIN_BEAN_NAME_EXCEPTION_MSG = "For bean %s was found several different names definitions: [%s]. Please choose one.";
+  private final static String COMPONENT_NAME_FIELD = "value";
+  private final static String QUALIFIER_NAME_FIELD = "value";
 
   /**
-   * Generate bean name for the given class type.
+   * Extract bean name from component annotation or generate a unique bean name for
+   * the given bean definition
    *
-   * @param beanClass bean class to generate bean name for
+   * @param beanClass the bean to generate a bean name for
+   *
    * @return the generated bean name
    */
-  public static String generateClassBeanName(Class<?> beanClass) {
+  public String getBeanName(Class<?> beanClass) {
     validateBeanClassNonNull(beanClass);
-    return uncapitalize(beanClass);
+    Set<String> namesFromAnnotations = extractBeanNamesFromAnnotations(beanClass);
+
+    if (namesFromAnnotations.isEmpty()) {
+      return generateBeanName(beanClass);
+    }
+
+    if (namesFromAnnotations.size() == 1) {
+      return namesFromAnnotations.stream().findFirst().get();
+    }
+
+    String beanNames = String.join(", ", namesFromAnnotations);
+    log.error(
+      "For bean {} was found several different names definitions: [{}]. Please choose one.",
+      beanClass.getName(), beanNames);
+    throw new IllegalStateException(
+      UNCERTAIN_BEAN_NAME_EXCEPTION_MSG.formatted(beanClass.getName(), beanNames));
   }
 
   /**
@@ -74,18 +71,22 @@ public class BeanDefinitionReaderUtils {
    * @param beanConstructor the constructor of the bean to analyze for dependencies
    * @return a list of bean constructor dependency types
    */
-  public static List<BeanDependency> getConstructorBeanDependencies(
-      Constructor<?> beanConstructor) {
+  public static List<BeanDependency> getConstructorBeanDependencies(Constructor<?> beanConstructor) {
     Objects.requireNonNull(beanConstructor, () -> {
       log.error("Failed to get bean constructor dependencies for nullable constructor");
       return "Bean constructor has not been specified";
     });
     log.trace("Scanning class {} for @Autowire candidates", beanConstructor.getDeclaringClass());
 
-    return Arrays.stream(beanConstructor.getParameterTypes())
-        .map(dependency -> new BeanDependency(generateClassBeanName(dependency), dependency))
-        .toList();
+    Map<String, String> parameterNameByAnnotationValue =
+      ReflectionUtils.extractMethodAnnotationValues(beanConstructor, Qualifier.class,
+        QUALIFIER_NAME_FIELD, String.class);
+
+    return Arrays.stream(beanConstructor.getParameters())
+      .map(parameter -> new BeanDependency(getBeanName(parameter.getType()), parameterNameByAnnotationValue.get(parameter.getName()), parameter.getType()))
+      .collect(Collectors.toList());
   }
+
 
   /**
    * Finds and returns the initialization constructor for a given bean class. The initialization
@@ -100,7 +101,6 @@ public class BeanDefinitionReaderUtils {
    *                                         {@link Autowired} annotation or multiple constructors
    *                                         marked with {@link Autowired}.
    */
-  // TODO: need to discuss: remove beanName
   public static Constructor<?> findBeanInitConstructor(Class<?> beanClass, String beanName) {
     Constructor<?>[] declaredConstructors = beanClass.getDeclaredConstructors();
 
@@ -183,28 +183,20 @@ public class BeanDefinitionReaderUtils {
     });
   }
 
-  public static void validateBeanClassName(BeanDefinition beanDefinition,
-      BeanDefinitionRegistry registry) {
-    Class<?> beanClass = beanDefinition.getBeanClass();
-    String beanClassName = beanClass.getName();
-
-    if (isSameBeanNameFromAnotherPackage(registry, beanClass, beanClassName)) {
-      log.error("Bean definition with name {} already existed", beanClassName);
-      throw new BeanDefinitionDuplicateException(
-          "Bean definition %s already exist".formatted(beanClassName));
-    }
+  private static Set<String> extractBeanNamesFromAnnotations(Class<?> beanClass) {
+    return Arrays.stream(beanClass.getAnnotations())
+      .filter(ReflectionUtils::isComponentAnnotation)
+      .map(annotation -> getClassAnnotationValue(beanClass,
+        annotation.annotationType(), COMPONENT_NAME_FIELD, String.class))
+      .filter(beanName -> nonNull(beanName) && !beanName.isBlank())
+      .collect(Collectors.toSet());
   }
 
-  private static String uncapitalize(Class<?> beanClass) {
-    return StringUtils.uncapitalize(beanClass.getSimpleName());
+  private static String generateBeanName(Class<?> beanClass) {
+   String beanName = beanClass.getName();
+    log.trace("Generated bean name: {} for class {}", beanName,
+      beanClass.getSimpleName());
+    return beanName;
   }
 
-  private static boolean isSameBeanNameFromAnotherPackage(BeanDefinitionRegistry registry,
-      Class<?> beanClass,
-      String beanName) {
-    return registry.isBeanNameInUse(beanName)
-        && !Objects.equals(beanClass.getPackageName(),
-        registry.getBeanDefinition(beanName).getBeanClass().getPackageName());
-
-  }
 }
